# DocQA

./: .gitignore
backend/: README.md  auth.py  clerk_auth.py  main.py  pyproject.toml  requirements.txt
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnswerRichText.tsx  CitationPopover.tsx  MessageItem.tsx
